--- a/riskmap/styles/main.css
+++ b/riskmap/styles/main.css
@@ -5,7 +5,7 @@
 		
 		#basemaps-wrapper {
 			position: absolute;
-			top: 10px;
+			top: 2%;
 			right: 21%;
 			z-index: 400;
 			background: white;
@@ -30,7 +30,7 @@
 		}
 		
 		div.searchtable table {
-			width: 256px;
+			width: 280px;
 			height: 85%;
 			/* 140px * 5 column + 16px scrollbar width */
 			font-size: 10px;
@@ -40,14 +40,15 @@
 		div.searchtable tbody {
 			display: block;
 		}
-		
-		div.searchtable thead tr {
+
+
+		div.searchtable thead {
 			display: block;
 		}
 		
 		div.searchtable tbody {
 			height: 400px;
-			width: 256px;
+			width: 280px;
 			overflow-y: auto;
 			overflow-x: auto;
 		}
@@ -58,9 +59,9 @@
 		}
 		
 		div.searchtable thead th:last-child {
-			width: 266px;
+			width: 296px;
 			/* 140px + 16px scrollbar width */
 		}
 		#heat{
-			margin-top: 60px;
+			margin-top: 6%;
 		}
