--- a/riskmap/styles/main.css
+++ b/riskmap/styles/main.css
@@ -1,12 +1,13 @@
+
 		#map {	
 			height: 85%;
-			width: 80%;
+			width: 78%;
 		}
 		
 		#basemaps-wrapper {
 			position: absolute;
 			top: 2%;
-			right: 21%;
+			right: 23%;
 			z-index: 400;
 			background: white;
 			padding: 5px;
@@ -21,47 +22,46 @@
 		
 		#kibana {
 			position: absolute;
-			left: 80%;
+			left: 78%;
 			top: 0;
+			border:2px solid black;
 		}
 		
 		#vesselcount {
 			font-weight: bold;
+			font-size: 16px;
 		}
-		
+		.searchtable{
+			width:315px;
+			max-height: 400px;
+    		overflow: auto;
+			border:2px solid black;
+		}
 		div.searchtable table {
-			width: 280px;
-			height: 85%;
-			/* 140px * 5 column + 16px scrollbar width */
+			width: 300px;
 			font-size: 10px;
 			border-spacing: 0;
 		}
 		
 		div.searchtable tbody {
-			display: block;
+			display: table-header-group;
 		}
 
 
 		div.searchtable thead {
-			display: block;
+			display: table-header-group;
+			font-weight: bold;
 		}
 		
-		div.searchtable tbody {
-			height: 400px;
-			width: 280px;
-			overflow-y: auto;
-			overflow-x: auto;
-		}
 		
+	
 		div.searchtable td {
-			width: 50px;
+			width: 60px;
+			max-width: 60px;
 			padding: 7px;
 		}
 		
-		div.searchtable thead th:last-child {
-			width: 296px;
-			/* 140px + 16px scrollbar width */
-		}
+		
 		#heat{
 			margin-top: 6%;
 		}
