--- a/riskmap/styles/main.css
+++ b/riskmap/styles/main.css
@@ -1,30 +1,34 @@
-
-		#map {	
-			height: 85%;
-			width: 78%;
+		html, body {
+		height: 100%;
+		overflow: auto;
+		width: 100%;
 		}
+
+		#map {
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+			height: 80%;
+			width: 75%;
+			}
 		
 		#basemaps-wrapper {
 			position: absolute;
 			top: 2%;
-			right: 23%;
+			right: 1%;
 			z-index: 400;
 			background: white;
 			padding: 5px;
+			
 		}
 		
 		#timeline {
-			height: 10%;
-			left: 0;
-			right: 0;
-			bottom: 0;
+			padding-top: 2px
 		}
 		
 		#kibana {
+			font-size: 12px;
 			position: absolute;
-			left: 78%;
+			left: 75%;
 			top: 0;
-			border:2px solid black;
 		}
 		.leaflet-draw-tooltip {
     		display: none;
@@ -34,13 +38,13 @@
 			font-size: 16px;
 		}
 		.searchtable{
-			width:315px;
+			width:auto;
 			max-height: 400px;
     		overflow: auto;
-			border:2px solid black;
+			font-size: 12px;
 		}
 		div.searchtable table {
-			width: 300px;
+			width: auto;
 			font-size: 10px;
 			border-spacing: 0;
 		}
@@ -58,8 +62,8 @@
 		
 	
 		div.searchtable td {
-			width: 60px;
-			max-width: 60px;
+			width: 87px;
+			max-width: 87px;
 			padding: 7px;
 		}
 		
