--- a/riskmap/styles/main.css
+++ b/riskmap/styles/main.css
@@ -1,19 +1,20 @@
 		html, body {
 		height: 100%;
-		overflow: auto;
+		overflow-y: auto;
+		overflow-x: hidden;
 		width: 100%;
 		}
 
 		#map {
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 			height: 80%;
-			width: 75%;
 			}
 		
 		#basemaps-wrapper {
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 			position: absolute;
 			top: 2%;
-			right: 1%;
+			right: 2%;
 			z-index: 400;
 			background: white;
 			padding: 5px;
@@ -21,13 +22,13 @@
 		}
 		
 		#timeline {
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 			padding-top: 2px
 		}
 		
 		#kibana {
 			font-size: 12px;
 			position: absolute;
-			left: 75%;
 			top: 0;
 		}
 		.leaflet-draw-tooltip {
@@ -62,8 +63,8 @@
 		
 	
 		div.searchtable td {
-			width: 87px;
-			max-width: 87px;
+			width: 85px;
+			max-width: 85px;
 			padding: 7px;
 		}
 		
